// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.decision.v1alpha1;

import "teleport/decision/v1alpha1/denial_metadata.proto";
import "teleport/decision/v1alpha1/permit_metadata.proto";
import "teleport/decision/v1alpha1/request_metadata.proto";
import "teleport/decision/v1alpha1/resource.proto";
import "teleport/decision/v1alpha1/ssh_identity.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/decision/v1alpha1;decisionpb";

// EvaluateSSHJoinRequest describes a request to evaluate whether or not a
// given ssh session-joining attempt should be permitted.
message EvaluateSSHJoinRequest {
  // Metadata holds common authorization decision request fields.
  RequestMetadata metadata = 1;

  // SshAuthority identifies the authority that issued the below identity.
  SSHAuthority ssh_authority = 2;

  // SshIdentity describes the teleport user requesting access.
  SSHIdentity ssh_identity = 3;

  // Node references the target node the user is attempting to access.
  Resource node = 4;

  // SessionId is the ID of the session the user is attempting to join.
  string session_id = 5;
}

// EvaluateSSHJoinResponse describes the result of an SSH session-joining evaluation.
message EvaluateSSHJoinResponse {
  oneof decision {
    SSHJoinPermit permit = 1;
    SSHJoinDenial denial = 2;
  }
}

// SSHJoinPermit describes the parameters/constraints of a permissible SSH
// access attempt.
message SSHJoinPermit {
  PermitMetadata metadata = 1;
  // TODO
}

// SSHJoinDenial describes an SSH session-joining denial.
message SSHJoinDenial {
  DenialMetadata metadata = 1;
}
